# WechatDemo

./: .prettierignore  README.md  components.d.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
eslint/: vueEslint.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  plugins.rs
src/Layouts/: BasePanel.vue
src/components/: NavActItem.vue
src/router/: index.ts
src/router/modules/: app.ts  main.ts
src/store/modules/: app.ts
src/views/: AutoLoginView.vue  GeneralLoginView.vue  LoginView.vue  RegisterView.vue
src/views/Home/: AutoLoginView.vue  ConfigView.vue  GeneralLoginView.vue  LoginView.vue  RegisterView.vue
store/modules/: app.ts
