[package]
name = "wechat-demo"
version = "0.1.0"
description = "A simple WeChat demo build with Tauri"
authors = ["BTMuli <bt-muli@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wechat_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
chrono = "0.4.38"

# deep link 插件
[dependencies.tauri-plugin-deep-link]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# dialog 插件
[dependencies.tauri-plugin-dialog]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# fs 插件
[dependencies.tauri-plugin-fs]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# http 插件
[dependencies.tauri-plugin-http]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"
features = ["unsafe-headers"]

# log 插件
[dependencies.tauri-plugin-log]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# os 插件
[dependencies.tauri-plugin-os]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# process 插件
[dependencies.tauri-plugin-process]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# shell 插件
[dependencies.tauri-plugin-shell]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# single-instance 插件
[dependencies.tauri-plugin-single-instance]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"

# sqlite 插件
[dependencies.tauri-plugin-sql]
git = "ssh://git@github.com/tauri-apps/plugins-workspace.git"
#git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v2"
features = ["sqlite"]
